2005-10-22  Sushma Rai  <rsushma@novell.com>

	* gui/widgets/eab-gui-util.c (eab_send_contact_list_as_attachment): 
	Marked subject line for translation. Fixes #317753

2005-10-22  Sushma Rai  <rsushma@novell.com>

	* gui/component/addressbook-config.c: Storing the search filter entered
	at configuration dialog.
	(addressbook_ldap_init)(source_to_uri_parts): Handling search filter.
	(eabc_details_search): Storing the serch filter value and added 
	callback to handle search filter changes.
	(search_filter_changed_cb)(url_changed): Store search filter in LDAP 
	url.
	(from_ldap_search_filter): If search filter entered is missing 
	parenthesis, adds them. 
	
	* gui/component/ldap-config.glade: Added an entry for entering the 
	search filter.
	Fixes #311884   	

2005-10-04   Devashish Sharma <sdevashish@novell.com>

	* gui/widgets/e-addressbook-view.etspec: Changed the compare type for
	"Organization" to stringcase. This new type has been defined for
	performing case insensitive locale sensitive UTF8 string compares.
	Fixes #207110. 

2005-10-04   Devashish Sharma <sdevashish@novell.com>

	* gui/widgets/e-addresbook-view.etspec: Changed the compare type for
	"File As" to "collate", so that proper lexicographical sorting (based
	on users locale)is employed. Fixes #271594, #273870. 

2005-10-04   Devashish Sharma <sdevashish@novell.com>

	* gui/contact-list-editor/e-contact-list-editor.etspec: Set the
	sorting column so that the contacts are alphabetically sorted in 
	contact list editor.  Fixes #265353.

2005-10-03   Devashish Sharma <sdevashish@novell.com>

	*  gui/widgets/e-addressbook-view.c (eab_view_print): Get selected 
	contacts list and forward it. Earlier list was not being sent so no 
	chance of printing the selected contacts.
	(eab_view_print_preview): Same as for print above.

	* printing/e-contact-print.c (e_contact_print_dialog_new): uses_book was
	being set in every case. removed that and set contact list which is now